fixed typo in html

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
       <div class="container-canvas">
         <div class="row row-titles"> 
           <div class="col-md-3 time"> 
-            <H2 id="Time"></H1>
+            <h2 id="Time"></h2>
           </div>
           <div class = "col-md-6"> 
-              <H1 id="Title">Defeat Thanos!</H1>
+              <h1 id="Title">Defeat Thanos!</h11>
           </div>
           <div class = "col-md-3 hits"> 
-              <H2 id="Hits"></H1>
+              <h2 id="Hits"></h2>
           </div>
         </div>
         <div class="row" id="game-container"></div>
